# sdncheck

./: LICENSE.txt  README.md  pyproject.toml  testfile.txt
src/sdncheck/: __about__.py  __init__.py  cli_parser.py  mbox.py  sdncheck.py
src/sdncheck/tests/: core.py  sdncheck.py
