[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdncheck"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Trevor Gamblin", email = "tgamblin@baylibre.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.scripts]
sdncheck = "sdncheck.tests.sdncheck:run"

[project.urls]
Documentation = "https://github.com/threexc/sdncheck#readme"
Issues = "https://github.com/threexc/sdncheck/issues"
Source = "https://github.com/threexc/sdncheck"

[tool.hatch.version]
path = "src/sdncheck/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/sdncheck tests}"

[tool.coverage.run]
source_pkgs = ["sdncheck", "tests"]
branch = true
parallel = true
omit = [
  "src/sdncheck/__about__.py",
]

[tool.coverage.paths]
sdncheck = ["src/sdncheck", "*/sdncheck/src/sdncheck"]
tests = ["tests", "*/sdncheck/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
